--- a/tasks/ubuntu/productivity.yml
+++ b/tasks/ubuntu/productivity.yml
@@ -2,7 +2,7 @@
   become: true
   apt:
     # name: ["tmux", "fzf", "tldr", "git", "curl", "wireguard", "jq"]
-    name: ["bash", "fzf", "tldr", "git", "curl", "jq", "bc"]
+    name: ["bash", "fzf", "tldr", "git", "curl", "jq", "bc", "fastfetch"]
     update_cache: true
   tags:
     - install
