chore: mpv cask

--- a/tasks/mac/mpv.yml
+++ b/tasks/mac/mpv.yml
@@ -1,6 +1,6 @@
 - name: Install mpv
-  homebrew:
-    name: ["mpv"]
+  homebrew_cask:
+    name: mpv
     state: present
     update_homebrew: true
   tags:
